# compare-pdf

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
api/: .env.example  README.md  pyproject.toml  server.py
api/pdf_ocr_diff_api/: __init__.py  config.py  main.py  models.py  routes.py
cli/: README.md  pyproject.toml
cli/pdf_ocr_diff_cli/: __init__.py  cli.py
core/: README.md  pyproject.toml
core/pdf_ocr_diff/: __init__.py  differ.py  models.py
core/tests/: __init__.py  test_differ.py  test_ocr.py
pdf_ocr_diff/: cli.py  differ.py  ocr.py
tests/: test_differ.py  test_models.py
ui/: README.md  index.html  package-lock.json  package.json
ui/public/diffs/: diff_output.json  diff_sip.json  recipe_diff.json  recipe_diff2.json
ui/public/pdfs/: recipe_diff.json
ui/src/: App.tsx  index.css
ui/src/components/: DiffList.tsx  DiffOverlay.tsx  DiffPopover.tsx  PDFCompareView.tsx
ui/src/store/: diffStore.ts
ui/src/types/: diff.ts
