[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-ocr-diff"
version = "0.1.0"
description = "A CLI tool to compare PDFs using OCR and generate spatial diffs"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Michael"}
]
dependencies = [
    "pdf2image>=1.16.0",
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
pdf-ocr-diff = "pdf_ocr_diff.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_ocr_diff*"]
