[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-ocr-diff"
version = "0.1.0"
description = "A CLI tool to compare PDFs using OCR and generate spatial diffs"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Michael"}
]
dependencies = [
    "pdf-ocr-diff-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
pdf-ocr-diff = "pdf_ocr_diff_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_ocr_diff_cli*"]
