[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-ocr-diff-core"
version = "0.1.0"
description = "Core library for PDF OCR diff operations"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Michael"}
]
dependencies = [
    "pdf2image>=1.16.0",
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_ocr_diff*"]
